# POLYBOT

./: .env.example  .gitignore  Makefile  README.md  brain.py  gamma_crawler.py  pyproject.toml
app/: __init__.py  config.py  logging.py  main.py  scheduler.py
app/api/: __init__.py  routes.py
app/ingestion/: __init__.py  gamma_client.py  market_service.py
app/models/: __init__.py  market.py  score.py
app/scoring/: __init__.py  opportunity_score.py
app/stage2/: __init__.py  claude_analyst.py  ws_listener.py
app/stage3/: __init__.py  dashboard.py  database.py  paper_trader.py
app/stage4/: __init__.py  auth.py  buckets.py  config.py  execution_client.py  execution_policy.py  live_guard.py  order_builder.py  ranking.py  universe.py
app/utils/: __init__.py  safe_math.py  terminal.py  time_utils.py
tests/: test_gamma_client.py  test_market_service.py  test_scorer.py  test_scoring.py  test_stage3.py  test_stage4.py
